--- a/sass/base/_typhography.scss
+++ b/sass/base/_typhography.scss
@@ -1,32 +1,42 @@
 // _typography.scss
 
 .poppins-header{
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Poppins', sans-serif;	
 }
 
 h1 {
-	color: rgb(192, 255, 4);
+	color: rgb(255, 255, 255);
 	font-weight: bolder;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Poppins', sans-serif;
 }
 h2 {
-	color: #3C2A21;
+	color: #ffffff;
 	font-family: 'Roboto', sans-serif;
 	font-weight: bold;
 }
 h4 {
-	color: aliceblue;
+	color: rgb(255, 255, 255);
 	font-size: 2rem;
-	text-shadow: grey;
+	text-shadow: rgb(5, 5, 5);
 	font-family: 'Roboto', sans-serif;
 }
-h6 {
+h5 {
+	color: rgb(0, 0, 0);
+	font-size: 1rem;
 	font-weight: bold;
-	color: #3C2A21;
+	text-shadow: rgb(5, 5, 5);
 	font-family: 'Roboto', sans-serif;
 }
+
+h6 {
+	color: #ffffff;
+	font-family: 'Roboto', sans-serif;
+	font-size: 1rem;
+}
+
+
 p {
-	color: #3C2A21;
+	color: #000000;
 	font-family: 'Roboto', sans-serif;
 }
 .centrado {
