--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -1,6 +1,6 @@
 // _variables.scss
 
-$primary-color: #959595;
+$primary-color: #e4e4e4;  //fondo header y footer//
 $secondary-color: #e4e4e4;
 $font-size: 16px;
 
@@ -12,33 +12,27 @@ footer {
 	margin-top: 1rem;
 }
 main {
-	background-color: $secondary-color;
-	animation: color-change-4x 6s infinite;
 	background-color: var(--secondary-color);
+	animation: color-change-4x 24s infinite;
 }
 
 :root {
 	--secondary-color: transparent;
-	animation: color-change-4x 6s infinite;
+	animation: color-change-4x 120s infinite;
 }
 
 @keyframes color-change-4x {
 	0% {
-	  background: #FFFFFF;
+	    background: #EC87E4;
 	}
-	10% {
-	  background: #cbcbcb;
-	  }
-	40% {
-	  background: #a3a3a3;
-	  }
+	30% {
+	    background: #51424F;
+	}
 	70% {
-	  background: #858585;
+	    background: #51424F;
 	}
-	80% {
-		background: #e3e3e3;
-	  }
 	100% {
-		background: #faf3f3;
+		background: #EC87E4;
 	}
 }
+
